--- a/apple-pie/src/styles/style.css
+++ b/apple-pie/src/styles/style.css
@@ -7,3 +7,36 @@ html {
   font-family: "Open Sans", sans-serif;
   font-size: 18px;
 }
+
+div.contenedor{
+  display: inline-block;
+  text-align: center;
+
+}
+
+div.contenedor p{
+  text-align: center;
+  font-size: xx-large;
+}
+
+h1.Encima{
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 5em ;
+  color: white;
+}
+
+div.contenedor2 {
+  text-align: left;
+  font-size: xx-large;
+}
+img{
+  display: block; 
+  margin: auto; 
+}
+
+div.contenedor3 {
+  text-align: left;
+  font-size: xx-large;
